# HuffmanArchiver

./: CMakeLists.txt  README.md
include/: huffman.h
src/: huffman.cpp  main.cpp
test/: autotest.cpp  autotest.h  huffman_test.cpp  huffman_test.h  test.cpp
